--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -6,6 +6,17 @@
     <title>Contact</title>
 </head>
 <body>
-    
+      <!-- Navbar -->
+      <header>
+        <div class="logo">YR<span class="full-name">Yasir Ahmed</span></div>
+        <nav>
+            <ul>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="PAGES/Aboutme.html">About</a></li>
+                <li><a href="PAGES/project.html">Portfolio</a></li>
+                <li><a href="PAGES/contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
