--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
+    <link rel="stylesheet" href="./css/Style.css">
 </head>
 <body>
-      <!-- Navbar -->
-      <header>
-        <div class="logo">YR<span class="full-name">Yasir Ahmed</span></div>
-        <nav>
-            <ul>
+    <!-- Navbar -->
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <img src="./Asset/logo.webp" alt="logo">
+                <span class="full-name">Yasir Ahmed</span>
+            </div>
+            <ul class="nav-links">
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="PAGES/Aboutme.html">About</a></li>
                 <li><a href="PAGES/project.html">Portfolio</a></li>
