created homepage and styled it

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link rel="stylesheet" href="./css/Style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"></script>
 </head>
 <body>
     <!-- Navbar -->
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="./Asset/logo.webp" alt="logo">
+                <img src="./Asset/logo.png" alt="logo">
                 <span class="full-name">Yasir Ahmed</span>
             </div>
             <ul class="nav-links">
@@ -22,5 +23,23 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Content Section -->
+    <section class="hero">
+        <div class="hero-content">
+            <img src="./Asset/profile-photo.jpeg" alt="Yasir Ahmed Profile Photo" class="profile-photo">
+            <h1>Creating Impactful Digital Experiences</h1>
+            <p>I'm Yasir Ahmed, a [Your Profession] specializing in [Your Key Skills].</p>
+            <a href="./PAGES/project.html" class="btn"><button> My Work</button></a>
+        </div>
+          <!-- Social Icons Below the Button -->
+          <div class="social-icons">
+            <a href="mailto:yaskamohamed00@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
+            <a href="tel:+254758741425" title="Phone"><i class="fas fa-phone"></i></a>
+            <a href="https://github.com/4512yasir" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+        </div>
+    </section>
+
+  
 </body>
 </html>
