created homepage and styled it

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="./Asset/logo.png" alt="logo">
+                <img src="https://files.oaiusercontent.com/file-8WNBCnPwSY4ywrdwvXgZ4J?se=2025-03-01T12%3A00%3A38Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3D5693581e-ae31-450c-9057-cf8f65838976.webp&sig=sCrUvXS1tYdPW/wWXjQHl7gQRDjcWcpPaPI9ZZ55xu4%3D" alt="logo">
                 <span class="full-name">Yasir Ahmed</span>
             </div>
             <ul class="nav-links">
@@ -36,7 +36,7 @@
           <div class="social-icons">
             <a href="mailto:yaskamohamed00@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
             <a href="tel:+254758741425" title="Phone"><i class="fas fa-phone"></i></a>
-            <a href="https://github.com/4512yasir" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/4512" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
         </div>
     </section>
 
