created about page

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="https://files.oaiusercontent.com/file-8WNBCnPwSY4ywrdwvXgZ4J?se=2025-03-01T12%3A00%3A38Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3D5693581e-ae31-450c-9057-cf8f65838976.webp&sig=sCrUvXS1tYdPW/wWXjQHl7gQRDjcWcpPaPI9ZZ55xu4%3D" alt="logo">
+                <img src="./Asset/213779576.png" alt="logo">
                 <span class="full-name">Yasir Ahmed</span>
             </div>
             <ul class="nav-links">
                 <li><a href="#" class="active">Home</a></li>
-                <li><a href="PAGES/Aboutme.html">About</a></li>
-                <li><a href="PAGES/project.html">Portfolio</a></li>
-                <li><a href="PAGES/contact.html">Contact</a></li>
+                <li><a href="Pages/About.html">About</a></li>
+                <li><a href="Pages/Portfolio.html">Portfolio</a></li>
+                <li><a href="Pages/Portfolio.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -29,7 +29,7 @@
         <div class="hero-content">
             <img src="./Asset/profile-photo.jpeg" alt="Yasir Ahmed Profile Photo" class="profile-photo">
             <h1>Creating Impactful Digital Experiences</h1>
-            <p>I'm Yasir Ahmed, a [Your Profession] specializing in [Your Key Skills].</p>
+            <p>I'm Yasir Ahmed, a Software Developer specializing in full-stack web development.</p>
             <a href="./PAGES/project.html" class="btn"><button> My Work</button></a>
         </div>
           <!-- Social Icons Below the Button -->
