craetion of portfolio and contact page

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -3,20 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Contact - Yasir Ahmed</title>
+    <link rel="stylesheet" href="../css/contact.css">
+    <script defer src="js/script.js"></script>
+    
 </head>
 <body>
-      <!-- Navbar -->
-      <header>
+
+    <!-- Navbar -->
+    <header>
         <div class="logo">YR<span class="full-name">Yasir Ahmed</span></div>
         <nav>
             <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="PAGES/Aboutme.html">About</a></li>
-                <li><a href="PAGES/project.html">Portfolio</a></li>
-                <li><a href="PAGES/contact.html">Contact</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./About.html">About</a></li>
+                <li><a href="./Portfolio.html">Portfolio</a></li>
+                <li><a href="#" class="active">Contact</a></li>
             </ul>
         </nav>
     </header>
+
+    <!-- Contact Section -->
+    <section class="contact">
+        <h2>Let's Connect</h2>
+        <p>I'm always open to new opportunities and collaborations. Feel free to reach out!</p>
+
+        <div class="contact-info">
+
+            <!-- Email -->
+            <div class="contact-box">
+                <i class="fas fa-envelope"></i>
+                <h3>Email</h3>
+                <p><a href="mailto:yasirahmed@example.com">yaskamohamed00@gmail.com</a></p>
+            </div>
+
+            <!-- Phone -->
+            <div class="contact-box">
+                <i class="fas fa-phone"></i>
+                <h3>Phone</h3>
+                <p><a href="tel:+1234567890">+254758741425</a></p>
+            </div>
+
+            <!-- Location -->
+            <div class="contact-box">
+                <i class="fas fa-map-marker-alt"></i>
+                <h3>Location</h3>
+                <p>Nairobi, Kenya</p>
+            </div>
+
+        </div>
+
+        <!-- Social Media -->
+        <div class="social-icons">
+            <a href="https://linkedin.com/in/yasir-ahmed" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/yasir-ahmed" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://twitter.com/yasir_ahmed" target="_blank"><i class="fab fa-twitter"></i></a>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Yasir Ahmed. All Rights Reserved.</p>
+    </footer>
+
 </body>
 </html>
+
