--- a/Pages/Portfolio.html
+++ b/Pages/Portfolio.html
@@ -3,20 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Portfolio - Yasir Ahmed</title>
+    <link rel="stylesheet" href="../css/Portfolio.css">
+    <script defer src="js/script.js"></script>
 </head>
 <body>
-      <!-- Navbar -->
-      <header>
+
+    <!-- Navbar -->
+    <header>
         <div class="logo">YR<span class="full-name">Yasir Ahmed</span></div>
         <nav>
             <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="PAGES/Aboutme.html">About</a></li>
-                <li><a href="PAGES/project.html">Portfolio</a></li>
-                <li><a href="PAGES/contact.html">Contact</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./About.html">About</a></li>
+                <li><a href="#" class="active">Portfolio</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
+
+    <!-- Portfolio Section -->
+    <section class="portfolio">
+        <h2>Featured Projects</h2>
+        <div class="projects-container">
+
+            <!-- Project 1 -->
+            <div class="project-card">
+                <img src="../Asset/portfolio.png"  target="_blank" alt="Project 1">
+                <h3>Portfolio</h3>
+                <p>A portfolio website showcasing creative design and animations.</p>
+                <a href="#" class="view-btn">View Project</a>
+            </div>
+
+            <!-- Project 2 -->
+            <div class="project-card">
+                <img src="../Asset/simpleweb.png" target="_blank" alt="Project 2">
+                <h3>Simple web page</h3>
+                <p>A responsive website </p>
+                <a href="https://portfolio-yr.netlify.app/" target="_blank" class="view-btn">View Project</a>
+            </div>
+
+            <!-- Project 3 -->
+            <div class="project-card">
+                <img src="../Asset/tip splitter.png" target="_blank" alt="Project 3">
+                <h3>Tip splitter</h3>
+                <p>A website to facilitate tip splitting</p>
+                <a href="https://tip-calculator-2-3.netlify.app/" target="_blank" class="view-btn">View Project</a>
+            </div>
+
+            <!-- Project 4 -->
+            <div class="project-card">
+                <img src="../Asset/cal.png" alt="Project 4">
+                <h3>Calculator</h3>
+                <p>A fully functional Calculator</p>
+                <a href="https://calator.netlify.app/" target="_blank" class="view-btn">View Project</a>
+            </div>
+
+            <!-- Project 5 -->
+            <div class="project-card">
+                <img src="../Asset/to do list.png" target="_blank" alt="Project 5">
+                <h3>To do list</h3>
+                <p>A website that help you keep list of your things to do </p>
+                <a href="https://work-manager.netlify.app/" class="view-btn">View Project</a>
+            </div>
+
+          
+          
+
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Yasir Ahmed. All Rights Reserved.</p>
+    </footer>
+
 </body>
 </html>
+
