--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="social-icons">
             <a href="mailto:yaskamohamed00@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
             <a href="tel:+254758741425" title="Phone"><i class="fas fa-phone"></i></a>
-            <a href="https://github.com/4512" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/4512yasir" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
         </div>
     </section>
 
