--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <img src="./Asset/profile-photo.jpeg" alt="Yasir Ahmed Profile Photo" class="profile-photo">
             <h1>Creating Impactful Digital Experiences</h1>
             <p>I'm Yasir Ahmed, a Software Developer specializing in full-stack web development.</p>
+            <p>Software Developer | Full-Stack Engineer | Tech Enthusiast</p>
             <a href="./PAGES/project.html" class="btn"><button> My Work</button></a>
         </div>
           <!-- Social Icons Below the Button -->
