--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="Pages/About.html">About</a></li>
                 <li><a href="Pages/Portfolio.html">Portfolio</a></li>
-                <li><a href="Pages/Portfolio.html">Contact</a></li>
+                <li><a href="Pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
