--- a/Pages/Portfolio.html
+++ b/Pages/Portfolio.html
@@ -5,22 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Yasir Ahmed</title>
     <link rel="stylesheet" href="../css/Portfolio.css">
-    <script defer src="js/script.js"></script>
+    <script defer src="../js/script.js"></script>
 </head>
 <body>
 
     <!-- Navbar -->
-    <header>
-        <div class="logo">YR<span class="full-name">Yasir Ahmed</span></div>
+    <div class="navbar">
+        <div class="logo">
+            <img src="../Asset/213779576.png" alt="Logo">
+            <span class="full-name">Yasir Ahmed</span>
+        </div>
         <nav>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./About.html">About</a></li>
                 <li><a href="#" class="active">Portfolio</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
-    </header>
+    </div>
 
     <!-- Portfolio Section -->
     <section class="portfolio">
@@ -29,7 +32,7 @@
 
             <!-- Project 1 -->
             <div class="project-card">
-                <img src="../Asset/portfolio.png"  target="_blank" alt="Project 1">
+                <img src="../Asset/portfolio.png" alt="Project 1">
                 <h3>Portfolio</h3>
                 <p>A portfolio website showcasing creative design and animations.</p>
                 <a href="#" class="view-btn">View Project</a>
@@ -37,17 +40,17 @@
 
             <!-- Project 2 -->
             <div class="project-card">
-                <img src="../Asset/simpleweb.png" target="_blank" alt="Project 2">
+                <img src="../Asset/simpleweb.png" alt="Project 2">
                 <h3>Simple web page</h3>
-                <p>A responsive website </p>
+                <p>A responsive website.</p>
                 <a href="https://portfolio-yr.netlify.app/" target="_blank" class="view-btn">View Project</a>
             </div>
 
             <!-- Project 3 -->
             <div class="project-card">
-                <img src="../Asset/tip splitter.png" target="_blank" alt="Project 3">
+                <img src="../Asset/tip splitter.png" alt="Project 3">
                 <h3>Tip splitter</h3>
-                <p>A website to facilitate tip splitting</p>
+                <p>A website to facilitate tip splitting.</p>
                 <a href="https://tip-calculator-2-3.netlify.app/" target="_blank" class="view-btn">View Project</a>
             </div>
 
@@ -55,20 +58,17 @@
             <div class="project-card">
                 <img src="../Asset/cal.png" alt="Project 4">
                 <h3>Calculator</h3>
-                <p>A fully functional Calculator</p>
+                <p>A fully functional calculator.</p>
                 <a href="https://calator.netlify.app/" target="_blank" class="view-btn">View Project</a>
             </div>
 
             <!-- Project 5 -->
             <div class="project-card">
-                <img src="../Asset/to do list.png" target="_blank" alt="Project 5">
-                <h3>To do list</h3>
-                <p>A website that help you keep list of your things to do </p>
-                <a href="https://work-manager.netlify.app/" class="view-btn">View Project</a>
+                <img src="../Asset/to do list.png" alt="Project 5">
+                <h3>To-Do List</h3>
+                <p>A website to help you keep track of your tasks.</p>
+                <a href="https://work-manager.netlify.app/" target="_blank" class="view-btn">View Project</a>
             </div>
-
-          
-          
 
         </div>
     </section>
@@ -80,4 +80,3 @@
 
 </body>
 </html>
-
