--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Yasir Ahmed</title>
-    <link rel="stylesheet" href="../css/contact.css">
-    <script defer src="js/script.js"></script>
     
+    <!-- FontAwesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    
+    <link rel="stylesheet" href="../css/contact.css">
+    <script defer src="../js/script.js"></script>
 </head>
 <body>
 
     <!-- Navbar -->
-    <header>
-        <div class="logo">YR<span class="full-name">Yasir Ahmed</span></div>
+    <header class="navbar">
+        <div class="logo">
+            <img src="../Asset/213779576.png" alt="YR Logo">
+            <span class="full-name">Yasir Ahmed</span>
+        </div>
         <nav>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="./About.html">About</a></li>
                 <li><a href="./Portfolio.html">Portfolio</a></li>
@@ -34,14 +40,14 @@
             <div class="contact-box">
                 <i class="fas fa-envelope"></i>
                 <h3>Email</h3>
-                <p><a href="mailto:yasirahmed@example.com">yaskamohamed00@gmail.com</a></p>
+                <p><a href="mailto:yaskamohamed00@gmail.com">yaskamohamed00@gmail.com</a></p>
             </div>
 
             <!-- Phone -->
             <div class="contact-box">
                 <i class="fas fa-phone"></i>
                 <h3>Phone</h3>
-                <p><a href="tel:+1234567890">+254758741425</a></p>
+                <p><a href="tel:+254758741425">+254758741425</a></p>
             </div>
 
             <!-- Location -->
@@ -68,4 +74,3 @@
 
 </body>
 </html>
-
