--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1>Creating Impactful Digital Experiences</h1>
             <p>I'm Yasir Ahmed, a Software Developer specializing in full-stack web development.</p>
             <p>Software Developer | Full-Stack Engineer | Tech Enthusiast</p>
-            <a href="./PAGES/project.html" class="btn"><button> My Work</button></a>
+            <a href="./Pages/Portfolio.html" class="btn"><button> My Work</button></a>
         </div>
           <!-- Social Icons Below the Button -->
           <div class="social-icons">
